--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -45,10 +45,32 @@
     justify-content: center;
 
 }
+
+.currentEpisode{
+    text-align: center;
+
+    img{
+        border-radius: 1.5rem;
+    }
+
+    strong{
+        display: block;
+        margin-top: 2rem;
+        font: 600 1.25rem Lexend, sans-serif;
+        line-height: 1.75rem;
+    }
+
+    span{
+        display: block;
+        margin-top: 1rem;
+        opacity: 0.6;
+        line-height: 1.5rem;
+    }
+}
 .progress{
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
     font-size: 0.875rem;
 
     span{
@@ -82,11 +104,29 @@
         border: 0;
         font-size: 0;
 
+        transition: filter 0.2s;
+
+        &:hover:not(:disabled){
+
+            filter: brightness(0.85)
+        }
+
         &.playButton{
             width: 4rem;
             height: 4rem;
             border-radius: 1rem;
             background-color: var(--purple-400);
+
+
+            &:hover{
+                filter: brightness(0.95)
+            }
+        }
+
+        &:disabled{
+            cursor: default;
+
+
         }
     }
 }
