--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -33,6 +33,12 @@
     }
 }
 
+@media (max-width: 1366px){
+    html{
+      font-size: 80%;
+    }
+}
+
 body{
     background-color: var(--gray-50);
 }
