--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -125,8 +125,14 @@
 
         &:disabled{
             cursor: default;
-
-
+            opacity: 0.2;
+        }
+        
+        &.isActive{
+            filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
+        }
+        &.isActive:hover {
+            filter: brightness(0.6) invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
         }
     }
 }
